# MLEngineeringEpamCourse

./: .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yaml  docker-compose.yml  dvc.yaml  get_data.py  metrics.json  preprocess_data.py  pyproject.toml  request.txt  requirements.txt  test_data.py  test_model.py  train.py
.dvc/: config
.github/workflows/: cml.yaml
Task1/: Dockerfile  Example.ipynb  README.md  environment.yml  file.sh  jupyter_notebook_config.json  jupyter_run.sh
Task2/: dvc.yaml  preprocess_data.py
Task2/data/: preprocessed_data.csv
dags/: etl.py  predict_piipeline.py  train_pipeline.py
dags/utils/: get_data.py  predict.py  preprocess_data.py  train.py
data/: .gitignore
mlflow/: Dockerfile  requirements.txt
src/fastapi/: Dockerfile  main.py  requirements.txt
src/fastapi/utils/: get_data.py  predict.py  preprocess_data.py  train.py
train_pipeline/: Dockerfile  get_data.py  preprocess_data.py  requirements.txt  train.py
