[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml_ops_task5"
version = "1.0.0"
authors = [
  { name="Maksim Krug"},
]
description = "MLOPS Task5 package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
